--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -15,6 +15,7 @@ footer.cp-footer {
 
   .social {
     margin-bottom: 0.25rem;
+    font-size: 1.3rem;
   }
 
   .social a {
@@ -26,6 +27,12 @@ footer.cp-footer {
   .social a:hover {
     color: #c91f2e;
     text-decoration: underline;
+  }
+
+  .linkedin-icon {
+    position: relative;
+    top: 3.5px;
+    margin-right: 0.25rem;
   }
 
   .copyright {
